# remglk-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml
emscripten_em_js/: Cargo.toml
emscripten_em_js/src/: lib.rs
remglk/: Cargo.toml
remglk/src/: blorb.rs  lib.rs
remglk/src/blorb/: constants.rs  iff.rs  mod.rs
remglk/src/glkapi/: arrays.rs  common.rs  constants.rs  filerefs.rs  macros.rs  mod.rs  objects.rs  protocol.rs  protocol_impl.rs  schannels.rs  streams.rs  windows.rs
remglk_capi/: Cargo.toml  build.rs
remglk_capi/src/: blorb.rs  common.rs  dispatch.rs  emglken.rs  glkapi.rs  glkstart.rs  lib.rs
remglk_capi/src/glk/: Make.remglk-rs  emglken.h  gi_dispa.c  gi_dispa.h  glk.h  glkstart.h  rgblorb.c  support.c  support.h
remglk_capi/src/systems/: emglken.rs  library_emglken.js  standard.rs
tests/: imagetest.gblorb.regtest  prepare.sh  runtests.sh
