[package]
name = "remglk"
version = "0.1.0"
authors = ["Dannii Willis <curiousdannii@gmail.com>"]
description = "A Rust port of RemGlk"
edition = "2021"
homepage = "https://github.com/curiousdannii/remglk-rs"
license = "MIT"
repository = "https://github.com/curiousdannii/remglk-rs"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.33"
enum_dispatch = "0.3.12"
serde = {version = "1.0", features = ["derive", "rc"]}
thiserror = "1.0.40"
unicode-case-mapping = "0.5.0"
unicode-normalization = "0.1.22"
widestring = "1.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html