[package]
name = "remglk"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"

authors = ["Dannii Willis <curiousdannii@gmail.com>"]
description = "A Rust port of RemGlk"
homepage = "https://github.com/curiousdannii/remglk-rs"
license = "MIT"
repository = "https://github.com/curiousdannii/remglk-rs"

[dependencies]
byteorder = "1.5.0"
enum_dispatch = "0.3.12"
jiff = {version = "0.2.1", default-features = false}
serde = {version = "1.0", features = ["derive", "rc"]}
thiserror = "2.0.17"
widestring = "1.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html