[package]
name = "remglk_capi"
version = "0.1.0"
authors = ["Dannii Willis <curiousdannii@gmail.com>"]
description = "A Rust port of RemGlk - C API"
edition = "2021"
homepage = "https://github.com/curiousdannii/remglk-rs"
license = "MIT"
repository = "https://github.com/curiousdannii/remglk-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["staticlib"]

[dependencies]
remglk = {path = "../remglk", version = "0.1.0"}