[package]
name = "remglk_capi"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"

authors = ["Dannii Willis <curiousdannii@gmail.com>"]
description = "A Rust port of RemGlk - C API"
homepage = "https://github.com/curiousdannii/remglk-rs"
license = "MIT"
repository = "https://github.com/curiousdannii/remglk-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["staticlib"]

[dependencies]
remglk = {path = "../remglk", version = "0.1.0"}
serde = {version = "1.0"}
serde_json = "1.0"
thiserror = "1.0.40"
widestring = "1.0.2"

[target.'cfg(emscripten)'.dependencies]
emscripten_em_js = {path = "../emscripten_em_js", version = "0.1.0"}

[build-dependencies]
cc = "1.0"