[package]
name = "remglk_capi"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

authors = ["Dannii Willis <curiousdannii@gmail.com>"]
description = "A Rust port of RemGlk - C API"
homepage = "https://github.com/curiousdannii/remglk-rs"
license = "MIT"
repository = "https://github.com/curiousdannii/remglk-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["staticlib"]

[dependencies]
remglk = {path = "../remglk", version = "0.1.0"}
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0.17"
widestring = "1.0.2"

[target.'cfg(target_os = "emscripten")'.dependencies]
jiff = {version = "0.2.1", default-features = false}

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
jiff = {version = "0.2.1", default-features = false, features = ["perf-inline", "std"]}
unicode-case-mapping = "1.0.0"
unicode-normalization = "0.1.22"

[build-dependencies]
cc = "1.0"